# pico-test

./: CMakeLists.txt  build.ps1  main.cpp  pinout.txt
lora/: lora.cpp  lora.h  print.cpp  print.h
reboot/: bootsel-reboot.cpp  bootsel-reboot.h
